#51 & #52 perf: room과 coupn의 관계가 바뀌면서 couponIssuance 삭제